@@ -2,4 +2,5 @@
 <install>
     <folders>${SYSTEM_CONF}/mysql</folders>
     <copy_config>${SYSTEM_CONF}/mysql/imscp.cnf</copy_config>
+    <copy_config>${SYSTEM_CONF}/mysql/mysql.data</copy_config>
 </install>
