@@ -1,0 +1,2 @@
+SQLD_VERSION =
+SQLD_CONF_DIR = /etc/mysql
