@@ -10,6 +10,9 @@ BACKEND
 	Fixed: POP3 SSL and IMAP SSL services must be disabled when SSL is disabled for the services - Courier server impl.
 	Fixed: The .my.cnf file is no longer used and thus, must be removed
 
+CONFIGS
+	Added: mysql.data configuration file
+
 FRONTEND
 	Fixed: Domain limit is not updated when a domain is being deleted (reseller level)
 	Fixed: Opcode cache must be cleared when the languages index is rebuilt
